--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>About This Website</title>
 
 <script src="site_libs/header-attrs-2.18/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -256,7 +256,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="DC-Crime-Viz/index.html">DC Crime Visualization</a>
+      <a href="_site/DC-Crime-Viz/index.html">DC Crime Visualization</a>
     </li>
   </ul>
 </li>
@@ -272,16 +272,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">About This Website</h1>
 
 </div>
 
 
-<p>Hello, There!</p>
-<p>This website is to show my works on projects and for you to get to
-know me.</p>
-<p>If you are interested in projects I did please click on the
-<strong>Projects</strong> drop down menu, and go to my projects.</p>
+<p>More about this website.</p>
 
 
 
