added big data eda

--- a/about.html
+++ b/about.html
@@ -258,6 +258,9 @@ $(document).ready(function () {
     <li>
       <a href="sites/DC-Crime-Viz/index.html">DC Crime Visualization</a>
     </li>
+    <li>
+      <a href="sites/project_eda.html">Reddit Big Data-Ongoing</a>
+    </li>
   </ul>
 </li>
       </ul>
