added who am i and edu in about

--- a/about.html
+++ b/about.html
@@ -280,7 +280,25 @@ $(document).ready(function () {
 </div>
 
 
-<p>More about this website.</p>
+<div id="about-me" class="section level2">
+<h2>About Me</h2>
+<div id="who-am-i" class="section level3">
+<h3>Who am I?</h3>
+<p>I am a master student at Georgetown University studying data science
+and analytics. I am also an graduate teaching assistant for the
+university’s data science program. Specifically for the database course,
+I am responsible for help teaching students SQL and database design.</p>
+</div>
+<div id="education-background" class="section level3">
+<h3>Education Background</h3>
+<ul>
+<li><strong>Master of Science in Data Science and Analytics</strong>
+(Georgetown University, 2020 - Present)</li>
+<li><strong>Bachelor of Science in Statistics</strong> (University of
+California, Davis, 2016 - 2021)</li>
+</ul>
+</div>
+</div>
 
 
 
