big data project complete

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <title>About This Website</title>
 
-<script src="site_libs/header-attrs-2.18/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
@@ -259,7 +259,7 @@ $(document).ready(function () {
       <a href="sites/DC-Crime-Viz/index.html">DC Crime Visualization</a>
     </li>
     <li>
-      <a href="sites/project_eda.html">Reddit Big Data-Ongoing</a>
+      <a href="sites/big-data/index.html">Reddit Big Data</a>
     </li>
   </ul>
 </li>
