--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@ $(document).ready(function () {
     </li>
   </ul>
 </li>
+<li>
+  <a href="https://www.linkedin.com/in/yannian-liu-000142142/">LinkedIn Profile</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
